--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Heebo');
 
 .booyah-box {
   -webkit-box-shadow:1px 1px 2px 0 #d0d0d0;
@@ -26,4 +27,11 @@ body{
 .navbar {
   background: image_url('food.png');
   box-shadow: 0px 1px 3px #000000;
+}
+
+.navbar-inverse .navbar-brand{
+   color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    font-family: 'Heebo', sans-serif;
+    font-size: 26px;
 }
