--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,10 @@
             </li>
           <% else %>
             <li class="nav-item" >
-              <%= link_to 'No user is signed in :(', '#', class: 'nav-link' %>
+              <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
             </li>
           <% end %>
         </ul>
