--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -9,6 +9,15 @@
     <% end %>
   </div>
 
-  <%= will_paginate @places %>
-
 <%end %>
+
+<nav aria-label="Search Results Pages">
+    <ul class="pagination">
+       <%= will_paginate @places, class: "pagination" %>
+      <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item"><a class="page-link" href="#">Next</a></li>
+    </ul>
+</nav>
