--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,6 +1,6 @@
 <% @places.each do |place| %>
   <div class = "booyah-box col-10 offset-1">
-    <h1><%= place.name %></h1>
+    <h1><%= link_to place.name, place_path(place) %></h1><br />
     <i><%= place.address %></i><br /><br />
     <p><%= place.description %></p><br /> 
 
@@ -11,13 +11,5 @@
 
 <%end %>
 
-<nav aria-label="Search Results Pages">
-    <ul class="pagination">
-       <%= will_paginate @places, class: "pagination" %>
-      <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item"><a class="page-link" href="#">Next</a></li>
-    </ul>
-</nav>
+<%= will_paginate @places, class: "flickr_pagination" %>
+
