--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,25 @@
-<h2>Forgot your password?</h2>
+<br/><br/>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+<div class="booyah-box col-10 offset-1">
+  <h2>Forgot Password</h2>
+  <br/>
+  <h6> Please enter your email address and we will send you an email about how to reset your password. </h6>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
+  <br/>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
+  <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= f.error_notification %>
 
-<%= render "devise/shared/links" %>
+    <div class="form-inputs">
+      <%= f.input :email, required: true, autofocus: true %>
+    </div>
+
+    <div class="form-actions">
+      <%= f.button :submit, 'Reset Password', class: "btn btn-primary" %>
+    </div>
+  <% end %>
+
+<br/>
+
+  <%= render "devise/shared/links" %>
+</div>
