--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -56,8 +56,11 @@
 <% @place.comments.each do |comment| %>
   <div>
     <blockquote>
-      <b><%= comment.rating %></b> -
+      <% if comment.humanized_rating.present? %>
+        <b><%= comment.humanized_rating %></b> -
+      <% end%>
       <%= comment.message %>
+      <small><%= comment.user.email %></small>
     </blockquote>
   </div>
 <% end %>
