--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -40,16 +40,7 @@
   </div>
 </div>
 
-<div class="clear"></div>
-<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-  <%= f.input :message %>
-  <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
-
-  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
-<% end %>
-
-
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#MyModal">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
   Launch demo modal
 </button>
 
@@ -63,12 +54,15 @@
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+           <%= f.input :message %>
+           <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save Changes</button>
+        <%= f.submit "Save Changes", class: 'btn btn-primary' %>
       </div>
+        <% end %>
     </div>
   </div>
 </div>
