--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,6 +7,7 @@
     <% if place.user.present? %>
       <small><%= place.user.email %></small>
     <% end %>
+  </div>
 
 <% if place.comments.present? %>
     <div class="col-12 col">
@@ -20,5 +21,7 @@
     </div>
   </div>
 <%end%>
+<%end%>
 
 <%= will_paginate @places, class: "flickr_pagination" %>
+
