--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,10 +7,9 @@
     <% if place.user.present? %>
       <small><%= place.user.email %></small>
     <% end %>
-  </div>
 
 <% if place.comments.present? %>
-    <div class="col-12 col">
+    <div class="col-12">
       <blockquote>
         <% if place.comments.last.humanized_rating.present? %>
           <b><%= place.comments.last.humanized_rating %></b> -
@@ -19,8 +18,6 @@
         <small><%= place.comments.last.user.email %></small>
       </blockquote>
     </div>
-  </div>
-<%end%>
 <%end%>
 
 <%= will_paginate @places, class: "flickr_pagination" %>
