--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -67,7 +67,7 @@ body{
   .flickr_pagination .next_page {
     margin-left: 1em; }
 
-  .help_block {
+  .help-block {
     color: #ff3333;
     background-color: #FFEEEE;
     border-radius: 3px;
