--- a/app/views/notification_mailer/comment_added.text.erb
+++ b/app/views/notification_mailer/comment_added.text.erb
@@ -1,6 +1,8 @@
 Hey There! 
 
-Comgrats! A comment has been added on NYC Eats
+Congrats. A comment has been added on NYC Eats.
+
+Check it out, <%= place_url(@place) %>
 
 Best,
 Linda
