--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,3 +1,35 @@
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <%= image_tag 'TWS1_SweetChick6.jpg', class:"d-block img-fluid" %>
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Find the best chicken and waffles here </h3>
+      </div>
+    </div>
+    <div class="carousel-item active">
+      <%= image_tag '2artbar.jpg', class:"d-block img-fluid" %> 
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Best stop for happy hour</h3>
+      </div>
+    </div>
+    <div class="carousel-item active">
+      <%= image_tag 'Macondo_slider2.jpg', class: "d-block img-fluid" %>
+      <div class="carousel-caption d-none d-md-block">
+        <h3>Find the best magaritas and fish tacos</h3>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
 <% @places.each do |place| %>
   <div class = "booyah-box col-10 offset-1">
     <h1><%= link_to place.name, place_path(place) %></h1><br />
