corrected spelling error in slider

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,19 +1,19 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <%= image_tag 'TWS1_SweetChick6.jpg', class:"d-block img-fluid" %>
+      <%= image_tag 'TWS1_SweetChick6.jpg', class:'d-block img-fluid' %>
       <div class="carousel-caption d-none d-md-block">
         <h3>Find the best chicken and waffles here </h3>
       </div>
     </div>
     <div class="carousel-item active">
-      <%= image_tag '2artbar.jpg', class:"d-block img-fluid" %> 
+      <%= image_tag '2artbar.jpg', class:'d-block img-fluid' %> 
       <div class="carousel-caption d-none d-md-block">
         <h3>Best stop for happy hour</h3>
       </div>
     </div>
     <div class="carousel-item active">
-      <%= image_tag 'Macondo_slider2.jpg', class: "d-block img-fluid" %>
+      <%= image_tag 'Macondo_slider2.jpg', class:'d-block img-fluid' %>
       <div class="carousel-caption d-none d-md-block">
         <h3>Find the best magaritas and fish tacos</h3>
       </div>
