--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,13 +6,13 @@
         <h3>Find the best chicken and waffles here </h3>
       </div>
     </div>
-    <div class="carousel-item active">
+    <div class="carousel-item">
       <%= image_tag '2artbar.jpg', class:'d-block img-fluid' %> 
       <div class="carousel-caption d-none d-md-block">
         <h3>Best stop for happy hour</h3>
       </div>
     </div>
-    <div class="carousel-item active">
+    <div class="carousel-item">
       <%= image_tag 'Macondo_slider2.jpg', class:'d-block img-fluid' %>
       <div class="carousel-caption d-none d-md-block">
         <h3>Find the best magaritas and fish tacos</h3>
