--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,7 @@
 <h1><%= @user.email %></h1>
+<br/>
+<h3>Member Since: <%=@user.created_at.strftime("%B %d, %Y") %></h3>
+<br/>
+<h4>Total Comments: <%=@user.comments.count %></h4>
+<br/>
+<h4>Total 5 Stars: <%=@user.comments.where(rating: '5_stars').count %></h4>
