--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,35 @@
-<h1><%= @user.email %></h1>
-<br/>
-<h3>Member Since: <%=@user.created_at.strftime("%B %d, %Y") %></h3>
-<br/>
-<h4>Total Comments: <%=@user.comments.count %></h4>
-<br/>
-<h4>Total 5 Stars: <%=@user.comments.where(rating: '5_stars').count %></h4>
+<div class="booyah-box">
+  <div class="row">
+    <div class="col-4">
+      <%= image_tag 'user.png' %>
+    </div>
+    <div class = "col-8">
+      <h1><%= @user.email %></h1>
+      <br/>
+      <h3>Member Since: <%=@user.created_at.strftime("%B %d, %Y") %></h3>
+      <br/>
+      <h4>Total Comments: <%=@user.comments.count %></h4>
+      <br/>
+      <h4>Total 5 Stars: <%=@user.comments.where(rating: '5_stars').count %></h4>
+    </div>
+  </div>
+  <div class= "clear"></div>
+</div>
+
+<br/><br/>
+<h1 class="text-center">My Comments</h1>
+<br/> <br/>
+<div class="row">
+  <% @user.comments.each do |comment| %>
+     <div class="col-12 col-sm-6">
+      <h2 class="text-center"><%= link_to comment.place.name, place_path(comment.place)%></h2>
+      <blockquote>
+        <% if comment.humanized_rating.present? %>
+          <b><%= comment.humanized_rating %></b> -
+        <% end %>
+        <%= comment.message %>
+        <small><%= comment.user.email %></small>
+      </blockquote>
+     </div>
+<% end %>
+</div>
