--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -51,13 +51,16 @@
         </button>
       </div>
 
+      <%=simple_form_for @photo, url: place_photos_path(@place) do |f|%>
       <div class="modal-body">
-        <%=simple_form_for @photo, url: place_photos_path(@place) %>
+        <%= f.input :caption %>
       </div>
+
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+         <%= f.submit "Save Changes", class: 'btn btn-primary' %>
       </div>
+        <% end %>
     </div>
   </div>
 </div>
