working on image uploader

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -41,11 +41,11 @@
 </div>
 
 <!-- Modal for Photos -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="MyModalLabel" aria-hidden="true">
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="MyModalLabel">Add a Photo</h5>
+        <h5 class="modal-title" id="myModalLabel">Add a Photo</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -65,8 +65,10 @@
   </div>
 </div>
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
+<br/> <br/>
+
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+  Add a Photo
 </button>
 
 <!-- Modal for Comments -->
