--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -40,11 +40,11 @@
   </div>
 
 <!-- Modal for Photos -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="myPhotoModal" tabindex="-1" role="dialog" aria-labelledby="myPhotoModal" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="myModalLabel">Add a Photo</h5>
+        <h5 class="modal-title" id="myPhotoModal">Add a Photo</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -52,6 +52,7 @@
 
       <%=simple_form_for @photo, url: place_photos_path(@place) do |f|%>
       <div class="modal-body">
+        <%= f.input :picture %>
         <%= f.input :caption %>
       </div>
 
@@ -64,7 +65,7 @@
   </div>
 </div>
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myPhotoModal">
   Add a Photo
 </button>
 </div>
