--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -20,12 +20,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body{
-  background:image_url('light-grey.png');
+  background:image_url('food.png');
   font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .navbar {
-  background: image_url('light-grey.png');
+  background: image_url('food.png');
   box-shadow: 0px 1px 3px #000000;
 }
 
